--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
             </div></a>
         </section>
-            <div class="special">
+            <div id="aanbiedingen" class="special">
                 <h3 class="title title-special">Aanbiedingen en Speciale Promoties</h3>
                 <div class="discount">
                     <p class="discount-num">15%</p>
