--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="burger-menu_nav">
                 <div class="close-menu">
-                    <img src="images/cross.png" alt="cross">
+                    <img style="width: 5rem;" src="images/cross.png" alt="cross">
                 </div>
                 <a href="#thuis" class="burger-menu_link">thuis</a>
                 <a href="#over" class="burger-menu_link">over ons</a>
