--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <section id="voorbelen" class="c5 container">
                 <h3 class="title">Voordelen</h3>
                 <p class="sub-title">Waarom kiezen voor<br> BeautyShock?</p>
-                <ul class="full-width">
+                <ul class="">
                     
                     <li>
                         <img src="images/1.png" alt="">
