--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="./images/logo.png" alt="logo">
             <div style="display: flex; align-items: center;">
             <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">UA</button>
+                <button onclick="myFunction()" class="dropbtn">NL</button>
                 <div id="myDropdown" class="dropdown-content">
                   <a href="#">USA</a>
                   <a href="#">FR</a>
@@ -113,7 +113,7 @@
             <div class="service-wrap two">
                 <p class="service-head">TOP SERVICES</p>
                 <div class="button-wrap">
-                    <p class="service-main">Manicure</p>
+                    <p class="service-main">Biab/Rubber<br> base</p>
                     <div class="service-button">meer details</div>
                 </div>
             </div></a>
@@ -121,7 +121,7 @@
             <div class="service-wrap three">
                 <p class="service-head">TOP SERVICES</p>
                 <div class="button-wrap">
-                    <p class="service-main">Manicure</p>
+                    <p class="service-main">Gel</p>
                     <div class="service-button">meer details</div>
                 </div>
             </div></a>
@@ -129,7 +129,7 @@
             <div class="service-wrap four">
                 <p class="service-head">TOP SERVICES</p>
                 <div class="button-wrap">
-                    <p class="service-main">Manicure</p>
+                    <p class="service-main">Pedicure</p>
                     <div class="service-button">meer details</div>
                 </div>
             </div></a>
@@ -137,7 +137,7 @@
             <div class="service-wrap five">
                 <p class="service-head">TOP SERVICES</p>
                 <div class="button-wrap">
-                    <p class="service-main">Manicure</p>
+                    <p class="service-main">Combine<br> Manicure and<br> Pedicure</p>
                     <div class="service-button">meer details</div>
                 </div>
             </div></a>
