--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="thuis" class="bg1">
         
         <div  class="top-wrap">
-            <img src="./images/logo.png" alt="logo">
+            <img src="./images/logo.svg" alt="logo">
             <div style="display: flex; align-items: center;">
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">NL</button>
@@ -396,7 +396,7 @@
             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <footer class="container">
-            <img  class="logo-footer" src="./images/logo-footer.png" alt="">
+            <img  class="logo-footer" src="./images/logo.svg" alt="">
             <p class="p">
                 © BeautyShock 2024. Alle rechten<br> voorbehouden. Volg ons op sociale media!<br><br>
                 <div class="contact-wrap">
