--- a/thankyoupage/index.html
+++ b/thankyoupage/index.html
@@ -24,7 +24,7 @@
         <p class="text-circle">
             Als u vragen heeft, neem dan gerust contact met ons op via WhatsApp door op de knop hieronder te klikken
         </p>
-        <a href="" >
+        <a href="https://wa.me/+32470129511" >
         <div class="button">
             <img src="./images/whatsapplogo.svg" alt="">
             WhatsApp
